# meet-in-the-middle

./: CMakeLists.txt  main.cpp
src/: dynamic_array.cpp  dynamic_array.hpp  median.cpp  median.hpp
tests/: median_test.cpp
